[project]
name = "images-grid-comfy-plugin"
description = "This tool provides a viewer node that allows for checking multiple outputs in a grid, similar to the X/Y Plot extension."
version = "2.6.0"
license = "MIT"

# Comfy UI
[project.urls]
Repository = "https://github.com/LEv145/images-grid-comfy-plugin"

[tool.comfy]
PublisherId = "lev145"
DisplayName = "images-grid-comfy-plugin"
Icon = "https://img10.joyreactor.cc/pics/comment/Anime-%D1%84%D1%8D%D0%BD%D0%B4%D0%BE%D0%BC%D1%8B-vtuber-Neuro-sama-4808746.png"
